--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>My Contact Details</h1>
-	<form action="deaniell.alfred.penaflor@adamson.edu.ph" method="post" enctype="text/plain">
+	<form action="mailto:deaniell.alfred.penaflor@adamson.edu.ph" method="post" enctype="text/plain">
 		<label>Your Name:</label>
 		<input type="text" name="yourName" value=""><br>
 		<label>Your Email:</label>
