--- a/index.html
+++ b/index.html
@@ -1,84 +1,196 @@
-<!DOCTYPE HTML>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
-	<title>Deaniell Peñaflor Personal site</title>
-	<link ref="styleshoot" href="css/styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>PERSONAL WEBSITE</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="shortcut icon" href="Anaheim electronics.png" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
-
+<header>
+	<h1>ANAHEIM ELECTRONICS</h1>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Me</a></li>
+			<li><a href="contact.html">Contact Me</a></li>
+			<li><a href="sounds.html">Sounds</a></li>
+			<li><a href="misc.html">Miscellaneous</a></li>
+		</ul>
+	</nav>
+</header>
 <body>
-	<table spacing="20">
-		<tr>
-	<td><img src="1x1 id q-modified.png" alt="My test image" width="120" height="auto">
-		<td>
-			<h1>Deaniell Peñaflor</h1>
-			<p><em>Founder and CEO of <strong><a href="https://anaheim.electronics.org">Anaheim Electronics</a></strong></em></p>
-			<p>I create innovative and revolutionizing electronic applications for the betterment of human society.</p>
-		</td>
-	</td>
-</tr>
-</table>
+	<style>
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
 
-<hr>
-<h3>Education</h3>
-<ul>
-	<li>Graduate: University of Tokyo</li>
-	<li>Tertiary: Adamson University</li>
-	<li>Secondary: Far Eastern University High School</li>
-	<li>Elementary: K. Tokyo International School</li>
-</ul>
 
-<a href="hobbies.html">My Hobbies</a>
-<a href="contact.html">My Contacts</a>
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
 
-<h3>My Work Experience</h3>
-<table border="5" cellspacing="12">
-<thead>
-	<tr>
-		<th>DATES</th>
-		<th>WORK</th>
-		<th>COMPANY</th>
-	</tr>
-</thead>
-<tr>
-	<td>2012-2015</td>
-	<td>Senior Software Engineer</td>
-	<td>Softbanks Inc.</td>
-</tr>
-<tr>
-	<td>2015-2017</td>
-	<td>Executive System Designer</td>
-	<td>Zeonic Heavy Works Corp.</td>
-</tr>
-<tr>
-	<td>2017-2020</td>
-	<td>CEO</td>
-	<td>Anaheim Electronics</td>
-</tr>
-</table>
-<h3>Skills</h3>
-<table border="3">
-	<thead>
-	<tr>
-		<th>Core Skills</th>
-		<th>Rates</th>
-	</tr>
-</thead>
-<tr>
-	<td>Communication</td>
-	<td>✨✨✨✨</td>
-</tr>
-<tr>
-	<td>Management</td>
-	<td>✨✨✨✨✨</td>
-</tr>
-<tr>
-	<td>Programming</td>
-	<td>✨✨✨✨✨</td>
-</tr>
-<tr>
-	<td>Negotiation</td>
-	<td>✨✨✨✨✨</td>
-</tr>
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+</style>
+</head>
+<body>
+
+
+<p style="color: white;">(no copyright music) lofi type beat “biscuit” | free vlog music | prod. by lukrembo</p>
+	<audio controls autoplay>
+  <source src="lofi biscuit.mp3" type="audio/mpeg">
+  	Your browser does not support mp3.
+</audio>
+
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="https://1.bp.blogspot.com/-IDmd8OiHTek/X_fdtEHHDiI/AAAAAAAHX2E/4Z52B0tAJaAbmmItNqV2xvqNWSMJznb-ACLcBGAsYHQ/s1200/hguc-xi-gundam%2B%25281%2529.jpg" style="width:100%">
+  <div class="text">Mobile Suit RX - 105 Xi Gundam</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="https://wallpaperaccess.com/full/6669536.jpg" style="width:100%">
+  <div class="text">Mobile Suit RX - 93 Nu Gundam</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="https://i.pinimg.com/originals/e6/56/3c/e6563c89bcc9cd2dc3231df02314fd44.jpg" style="width:100%">
+  <div class="text">Space Colony located in Lagrange point</div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
 </body>
-</html> 
+</html>
